from css to scss

--- a/02-namanganliklar24/article.html
+++ b/02-namanganliklar24/article.html
@@ -184,11 +184,12 @@
               </div>
             </div>
 
-            <img
-              class="world-news__sidebar-add"
-              src="images/add3.png"
-              alt="add 3"
-            />
+            <a href="#"
+              ><img
+                class="world-news__sidebar-add"
+                src="images/add3.png"
+                alt="add 3"
+            /></a>
           </div>
         </div>
 
