--- a/03-my-team/contact.html
+++ b/03-my-team/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyTeam</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="scss/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -13,8 +13,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
+        <div class="header__wrapper container">
           <div class="header__left">
             <a href="index.html"><img class="logo header__logo" src="images/myteam.png" alt="logo" /></a>
             <nav class="header__nav">
@@ -29,13 +28,11 @@
             <button class="header__toggle"><i class="fas fa-bars"></i></button>
           </div>
         </div>
-      </div>
     </header>
 
     <!-- CONTACT FORM -->
     <section class="contact">
-      <div class="container">
-        <div class="contact__wrapper">
+        <div class="contact__wrapper container">
           <div class="contact__left">
             <h1 class="contact__title heading--h1--sm">Contact</h1>
             <h3 class="contact__subtitle">Ask us about</h3>
@@ -59,19 +56,17 @@
               <input class="contact__form-input" type="text" placeholder="Name" />
               <input class="contact__form-input" type="email" placeholder="Email Address" />
               <input class="contact__form-input" type="text" placeholder="Company Name" />
-              <input type="text" placeholder="Title" />
-              <textarea rows="4" placeholder="Message"></textarea>
-              <button type="submit" class="btn btn-secondary">submit</button>
+              <input class="contact__form-input" type="text" placeholder="Title" />
+              <textarea class="contact__form-textarea" rows="4" placeholder="Message"></textarea>
+              <button type="submit" class="btn btn--secondary">submit</button>
             </form>
           </div>
         </div>
-      </div>
     </section>
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer__wrapper">
+        <div class="footer__wrapper container">
           <div class="footer__left">
             <div class="footer__left-top">
               <img
@@ -114,7 +109,6 @@
             </div>
           </div>
         </div>
-      </div>
     </footer>
   </body>
 </html>
