--- a/02-namanganliklar24/index.html
+++ b/02-namanganliklar24/index.html
@@ -375,11 +375,12 @@
               </div>
             </div>
 
-            <img
-              class="world-news__sidebar-add"
-              src="images/add3.png"
-              alt="add 3"
-            />
+            <a href="#"
+              ><img
+                class="world-news__sidebar-add"
+                src="images/add3.png"
+                alt="add 3"
+            /></a>
           </div>
         </div>
       </div>
@@ -397,24 +398,51 @@
           </p>
 
           <ul class="footer__links">
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Информация о сайте</a></li>
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Напишите нам</a></li>
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Реклама</a></li>
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Прислать новость</a></li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Информация о сайте</a>
+            </li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Напишите нам</a>
+            </li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Реклама</a>
+            </li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Прислать новость</a>
+            </li>
           </ul>
           <ul class="footer__links">
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Использование материалов</a></li>
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Темы дня</a></li>
-            <li class="footer__links-item"><a class="footer__links-link" href="#">Наша команда</a></li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#"
+                >Использование материалов</a
+              >
+            </li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Темы дня</a>
+            </li>
+            <li class="footer__links-item">
+              <a class="footer__links-link" href="#">Наша команда</a>
+            </li>
           </ul>
         </div>
         <div class="footer__social">
-          <h3 class="footer__social-title">Наши <br> социальные сети</h3>
+          <h3 class="footer__social-title">
+            Наши <br />
+            социальные сети
+          </h3>
           <div class="footer__social-links">
-            <a class="footer__social-link" href="#"><img src="images/facebook.png" alt="facebook"></a>
-            <a class="footer__social-link" href="#"><img src="images/telegram.png" alt="telegram"></a>
-            <a class="footer__social-link" href="#"><img src="images/instagram.png" alt="instagram"></a>
-            <a class="footer__social-link" href="#"><img src="images/youtube.png" alt="youtube"></a>
+            <a class="footer__social-link" href="#"
+              ><img src="images/facebook.png" alt="facebook"
+            /></a>
+            <a class="footer__social-link" href="#"
+              ><img src="images/telegram.png" alt="telegram"
+            /></a>
+            <a class="footer__social-link" href="#"
+              ><img src="images/instagram.png" alt="instagram"
+            /></a>
+            <a class="footer__social-link" href="#"
+              ><img src="images/youtube.png" alt="youtube"
+            /></a>
           </div>
         </div>
       </div>
