--- a/02-namanganliklar24/interesting.html
+++ b/02-namanganliklar24/interesting.html
@@ -237,11 +237,12 @@
               </div>
             </div>
 
-            <img
-              class="world-news__sidebar-add"
-              src="images/add3.png"
-              alt="add 3"
-            />
+            <a href="#"
+              ><img
+                class="world-news__sidebar-add"
+                src="images/add3.png"
+                alt="add 3"
+            /></a>
           </div>
         </div>
       </div>
