--- a/03-my-team/index.html
+++ b/03-my-team/index.html
@@ -3,115 +3,114 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyTeam</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="scss/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>MyTeam</title>
   </head>
   <body>
-
     <!-- HEADER -->
     <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
-          <div class="header__left">
-            <a href="index.html"><img class="logo header__logo" src="images/myteam.png" alt="logo" /></a>
-            <nav class="header__nav">
-              <a class="header__nav-link active" href="#">home</a>
-              <a class="header__nav-link" href="about.html">about</a>
-            </nav>
-          </div>
-          <div class="header__right">
-            <a class="header__contact-btn btn btn-primary" href="contact.html"
-              >contact us</a
-            >
-            <button
-              class="header__toggle"
-            >
-              <i class="fas fa-bars"></i>
-            </button>
-          </div>
+      <div class="header__wrapper container">
+        <div class="header__left">
+          <a href="index.html"
+            ><img class="logo header__logo" src="images/myteam.png" alt="logo"
+          /></a>
+          <nav class="header__nav">
+            <a class="header__nav-link active" href="#">home</a>
+            <a class="header__nav-link" href="about.html">about</a>
+          </nav>
+        </div>
+        <div class="header__right">
+          <a class="header__contact-btn btn btn--primary" href="contact.html"
+            >contact us</a
+          >
+          <button class="header__toggle">
+            <i class="fas fa-bars"></i>
+          </button>
         </div>
       </div>
     </header>
 
     <!-- HERO -->
     <section class="hero">
-      <div class="container">
-        <div class="hero__wrapper">
-          <h1 class="hero__title heading--h1--lg">
-            Find the <br />
-            best <span class="hero__title--highlight">talent</span>
-          </h1>
-          <p class="hero__text text--body-1">
-            Finding the right people and building high performing teams can be
-            hard. Most companies aren’t tapping into the abundance of global
-            talent. We’re about to change that.
-          </p>
-        </div>
+      <div class="hero__wrapper container">
+        <h1 class="hero__title heading--h1--lg">
+          Find the <br />
+          best <span class="hero__title--highlight">talent</span>
+        </h1>
+        <p class="hero__text text--body-1">
+          Finding the right people and building high performing teams can be
+          hard. Most companies aren’t tapping into the abundance of global
+          talent. We’re about to change that.
+        </p>
       </div>
     </section>
 
     <!-- FEATURES -->
     <section class="features">
-      <div class="container">
-        <div class="features__wrapper">
-          <div class="features__left">
-            <h2 class="features__title heading--h2">
-              Build & manage distributed teams like no one else.
-            </h2>
-          </div>
+      <div class="features__wrapper container">
+        <div class="features__left">
+          <h2 class="features__title heading--h2">
+            Build & manage distributed teams like no one else.
+          </h2>
+        </div>
 
-          <div class="features__right">
-            <div class="feature">
-              <img
-                class="feature__img"
-                src="images/feature1.svg"
-                alt="feature image"
-              />
-              <div>
-                <h3 class="feature__title heading--h3">
-                  Experienced Individuals
-                </h3>
-                <p class="feature__text text--body-2">
-                  Our network is made up of highly experienced professionals who
-                  are passionate about what they do.
-                </p>
-              </div>
+        <div class="features__right">
+          <div class="feature">
+            <img
+              class="feature__img"
+              src="images/feature1.svg"
+              alt="feature image"
+            />
+            <div>
+              <h3 class="feature__title heading--h3">
+                Experienced Individuals
+              </h3>
+              <p class="feature__text text--body-2">
+                Our network is made up of highly experienced professionals who
+                are passionate about what they do.
+              </p>
             </div>
-            <div class="feature">
-              <img
-                class="feature__img"
-                src="images/feature2.svg"
-                alt="feature image"
-              />
-              <div>
-                <h3 class="feature__title heading--h3">
-                  Experienced Individuals
-                </h3>
-                <p class="feature__text text--body-2">
-                  Our network is made up of highly experienced professionals who
-                  are passionate about what they do.
-                </p>
-              </div>
+          </div>
+          <div class="feature">
+            <img
+              class="feature__img"
+              src="images/feature2.svg"
+              alt="feature image"
+            />
+            <div>
+              <h3 class="feature__title heading--h3">
+                Experienced Individuals
+              </h3>
+              <p class="feature__text text--body-2">
+                Our network is made up of highly experienced professionals who
+                are passionate about what they do.
+              </p>
             </div>
-            <div class="feature">
-              <img
-                class="feature__img"
-                src="images/feature3.svg"
-                alt="feature image"
-              />
-              <div>
-                <h3 class="feature__title heading--h3">
-                  Experienced Individuals
-                </h3>
-                <p class="feature__text text--body-2">
-                  Our network is made up of highly experienced professionals who
-                  are passionate about what they do.
-                </p>
-              </div>
+          </div>
+          <div class="feature">
+            <img
+              class="feature__img"
+              src="images/feature3.svg"
+              alt="feature image"
+            />
+            <div>
+              <h3 class="feature__title heading--h3">
+                Experienced Individuals
+              </h3>
+              <p class="feature__text text--body-2">
+                Our network is made up of highly experienced professionals who
+                are passionate about what they do.
+              </p>
             </div>
           </div>
         </div>
@@ -180,7 +179,7 @@
       <div class="container">
         <div class="cta__wrapper">
           <h2 class="cta__title heading--h2">Ready to get started?</h2>
-          <a href="contact.html" class="cta__btn btn btn-primary-dark"
+          <a href="contact.html" class="cta__btn btn btn--primary-dark"
             >contact us</a
           >
         </div>
@@ -189,48 +188,42 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer__wrapper">
-          <div class="footer__left">
-            <div class="footer__left-top">
-              <img
-                class="footer__logo logo"
-                src="images/myteam.png"
-                alt="logo"
-              />
-              <nav class="footer__nav">
-                <ul class="footer__nav-list">
-                  <li class="footer__nav-item">
-                    <a class="footer__nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="footer__nav-item">
-                    <a class="footer__nav-link" href="about.html">About</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <a href="tel:949-833-7432" class="footer__address text--body-2">
-              987 Hillcrest Lane <br />
-              Irvine, CA <br />
-              California 92714 <br />
-              Call Us : 949-833-7432">
-            </a>
+      <div class="footer__wrapper container">
+        <div class="footer__left">
+          <div class="footer__left-top">
+            <img class="footer__logo logo" src="images/myteam.png" alt="logo" />
+            <nav class="footer__nav">
+              <ul class="footer__nav-list">
+                <li class="footer__nav-item">
+                  <a class="footer__nav-link" href="index.html">Home</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a class="footer__nav-link" href="about.html">About</a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <div class="footer__right">
-            <div class="footer__social">
-              <a class="footer__social-link" href="#"
-                ><i class="fab fa-facebook"></i
-              ></a>
-              <a class="footer__social-link" href="#"
-                ><i class="fab fa-pinterest"></i
-              ></a>
-              <a class="footer__social-link" href="#"
-                ><i class="fab fa-twitter"></i
-              ></a>
-            </div>
-            <div class="footer__copyright">
-              &copy; 2023 My Team. All rights reserved.
-            </div>
+          <a href="tel:949-833-7432" class="footer__address text--body-2">
+            987 Hillcrest Lane <br />
+            Irvine, CA <br />
+            California 92714 <br />
+            Call Us : 949-833-7432">
+          </a>
+        </div>
+        <div class="footer__right">
+          <div class="footer__social">
+            <a class="footer__social-link" href="#"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a class="footer__social-link" href="#"
+              ><i class="fab fa-pinterest"></i
+            ></a>
+            <a class="footer__social-link" href="#"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </div>
+          <div class="footer__copyright">
+            &copy; 2023 My Team. All rights reserved.
           </div>
         </div>
       </div>
