--- a/03-my-team/index.html
+++ b/03-my-team/index.html
@@ -17,6 +17,18 @@
     <title>MyTeam</title>
   </head>
   <body>
+    <!-- Off-canvas menu -->
+    <nav class="offcanvas">
+      <span class="offcanvas__close">&times;</span>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="btn btn--primary">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- Overlay (qoraroq fon) -->
+    <div class="overlay"></div>
+
     <!-- HEADER -->
     <header class="header">
       <div class="header__wrapper container">
@@ -228,5 +240,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="js/main.js" defer></script>
   </body>
 </html>
