--- a/03-my-team/about.html
+++ b/03-my-team/about.html
@@ -11,6 +11,17 @@
     />
   </head>
   <body>
+    <!-- Off-canvas menu -->
+    <nav class="offcanvas">
+      <span class="offcanvas__close">&times;</span>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="btn btn--primary">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- Overlay (qoraroq fon) -->
+    <div class="overlay"></div>
     <!-- HEADER -->
     <header class="header">
         <div class="header__wrapper container">
@@ -170,5 +181,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="js/main.js" defer></script>
   </body>
 </html>
