team cards event

--- a/03-my-team/contact.html
+++ b/03-my-team/contact.html
@@ -28,12 +28,12 @@
           <div class="header__left">
             <a href="index.html"><img class="logo header__logo" src="images/myteam.png" alt="logo" /></a>
             <nav class="header__nav">
-              <a class="header__nav-link active" href="#">home</a>
+              <a class="header__nav-link" href="#">home</a>
               <a class="header__nav-link" href="about.html">about</a>
             </nav>
           </div>
           <div class="header__right">
-            <a class="header__contact-btn btn btn-primary" href="contact.html"
+            <a class="header__contact-btn btn btn--primary" href="contact.html"
               >contact us</a
             >
             <button class="header__toggle"><i class="fas fa-bars"></i></button>
