--- a/03-my-team/index.html
+++ b/03-my-team/index.html
@@ -19,9 +19,9 @@
   <body>
     <!-- Off-canvas menu -->
     <nav class="offcanvas">
-      <span class="offcanvas__close">&times;</span>
+      <button class="offcanvas__close"><i class="fas fa-close"></i></button>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html" class="btn btn--primary">Contact</a></li>
       </ul>
