--- a/03-my-team/about.html
+++ b/03-my-team/about.html
@@ -16,7 +16,7 @@
       <span class="offcanvas__close">&times;</span>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="contact.html" class="btn btn--primary">Contact</a></li>
       </ul>
     </nav>
@@ -24,34 +24,36 @@
     <div class="overlay"></div>
     <!-- HEADER -->
     <header class="header">
-        <div class="header__wrapper container">
-          <div class="header__left">
-            <a href="index.html"><img class="logo header__logo" src="images/myteam.png" alt="logo" /></a>
-            <nav class="header__nav">
-              <a class="header__nav-link " href="index.html">home</a>
-              <a class="header__nav-link active" href="#">about</a>
-            </nav>
-          </div>
-          <div class="header__right">
-            <a class="header__contact-btn btn btn--primary" href="contact.html"
-              >contact us</a
-            >
-            <button class="header__toggle"><i class="fas fa-bars"></i></button>
-          </div>
+      <div class="header__wrapper container">
+        <div class="header__left">
+          <a href="index.html"
+            ><img class="logo header__logo" src="images/myteam.png" alt="logo"
+          /></a>
+          <nav class="header__nav">
+            <a class="header__nav-link" href="index.html">home</a>
+            <a class="header__nav-link active" href="#">about</a>
+          </nav>
         </div>
+        <div class="header__right">
+          <a class="header__contact-btn btn btn--primary" href="contact.html"
+            >contact us</a
+          >
+          <button class="header__toggle"><i class="fas fa-bars"></i></button>
+        </div>
+      </div>
     </header>
 
     <!-- ABOUT HERO -->
     <section class="about-hero">
-        <div class="about-hero__wrapper container">
-          <h1 class="about-hero__title heading--h1--sm">About</h1>
-          <p class="about-hero__text text--body-1">
-            We help companies build dynamic teams made up of top global talent.
-            Using our network of passionate professionals we drive innovation
-            and deliver incredible outcomes. Talented, diverse teams shape the
-            best products and experiences. We’ll bring those teams to you.
-          </p>
-        </div>
+      <div class="about-hero__wrapper container">
+        <h1 class="about-hero__title heading--h1--sm">About</h1>
+        <p class="about-hero__text text--body-1">
+          We help companies build dynamic teams made up of top global talent.
+          Using our network of passionate professionals we drive innovation and
+          deliver incredible outcomes. Talented, diverse teams shape the best
+          products and experiences. We’ll bring those teams to you.
+        </p>
+      </div>
     </section>
 
     <!-- TEAM MEMBERS -->
@@ -60,40 +62,128 @@
         <h2 class="team__title heading--h2">Meet the directors</h2>
         <div class="team__grid">
           <div class="team__card">
-            <img class="team__card-img" src="images/person4.png" alt="team member" />
+            <img
+              class="team__card-img"
+              src="images/person4.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Nikita Marks</h3>
             <p class="team__card-text text--body-2">CEO & Founder</p>
-            <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+            <button class="team__card-btn">
+              <i class="fas fa-plus"></i>
+            </button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
           <div class="team__card">
-            <img class="team__card-img" src="images/person5.png" alt="team member" />
+            <img
+              class="team__card-img"
+              src="images/person5.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Cristian Duncan</h3>
             <p class="team__card-text text--body-2">Co-founder & COO</p>
             <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
           <div class="team__card">
-            <img class="team__card-img" src="images/person6.png" alt="team member" />
+            <img
+              class="team__card-img"
+              src="images/person6.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Cruz Hamer</h3>
             <p class="team__card-text text--body-2">Co-founder & CTO</p>
             <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
           <div class="team__card">
-            <img class="team__card-img" src="images/person7.png" alt="team member" />
+            <img
+              class="team__card-img"
+              src="images/person7.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Drake Heaton</h3>
-            <p class="team__card-text text--body-2">Business Development Lead</p>
+            <p class="team__card-text text--body-2">
+              Business Development Lead
+            </p>
             <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
           <div class="team__card">
-            <img class="team__card-img" src="images/person8.png" alt="team member" />
+            <img
+              class="team__card-img"
+              src="images/person8.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Griffin Wise</h3>
             <p class="team__card-text text--body-2">Lead Marketing</p>
             <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="team__card">
-            <img class="team__card-img" src="images/person1.png" alt="team member" />
+          <div class="team__card active">
+            <img
+              class="team__card-img"
+              src="images/person1.png"
+              alt="team member"
+            />
             <h3 class="team__card-title heading--h3">Aden Allan</h3>
             <p class="team__card-text text--body-2">CEO & Founder</p>
             <button class="team__card-btn"><i class="fas fa-plus"></i></button>
+
+            <div class="team__card-info">
+              <p class="team__card-info-text">
+                “Empowered teams create truly amazing products. Set the north star and let them follow it.”
+              </p>
+              <div class="team__card-socials">
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="team__card-socials-link"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -105,19 +195,39 @@
         <h2 class="clients__title heading--h2">Some of our clients</h2>
         <div class="clients__grid">
           <a href="#" class="client">
-            <img class="client__img" src="images/client4.png" alt="client logo" />
+            <img
+              class="client__img"
+              src="images/client4.png"
+              alt="client logo"
+            />
           </a>
           <a href="#" class="client">
-            <img class="client__img" src="images/client3.png" alt="client logo" />
+            <img
+              class="client__img"
+              src="images/client3.png"
+              alt="client logo"
+            />
           </a>
           <a href="#" class="client">
-            <img class="client__img" src="images/client5.png" alt="client logo" />
+            <img
+              class="client__img"
+              src="images/client5.png"
+              alt="client logo"
+            />
           </a>
           <a href="#" class="client">
-            <img class="client__img" src="images/client2.png" alt="client logo" />
+            <img
+              class="client__img"
+              src="images/client2.png"
+              alt="client logo"
+            />
           </a>
           <a href="#" class="client">
-            <img class="client__img" src="images/client1.png" alt="client logo" />
+            <img
+              class="client__img"
+              src="images/client1.png"
+              alt="client logo"
+            />
           </a>
         </div>
       </div>
@@ -128,7 +238,9 @@
       <div class="container">
         <div class="cta__wrapper">
           <h2 class="cta__title heading--h2">Ready to get started?</h2>
-          <a href="contact.html" class="cta__btn btn btn--primary-dark">contact us</a>
+          <a href="contact.html" class="cta__btn btn btn--primary-dark"
+            >contact us</a
+          >
         </div>
       </div>
     </section>
