--- a/03-my-team/index.html
+++ b/03-my-team/index.html
@@ -20,10 +20,10 @@
     <!-- Off-canvas menu -->
     <nav class="offcanvas">
       <button class="offcanvas__close"><i class="fas fa-close"></i></button>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html" class="btn btn--primary">Contact</a></li>
+      <ul class="offcanvas__list">
+        <li class="offcanvas__list-item"><a href="index.html" class="active">Home</a></li>
+        <li class="offcanvas__list-item"><a href="about.html">About</a></li>
+        <li class="offcanvas__list-item"><a href="contact.html" class="btn btn--primary">Contact</a></li>
       </ul>
     </nav>
     <!-- Overlay (qoraroq fon) -->
